# janus

./: .buckconfig  .gitignore  .gitmodules  .travis.yml  BUCK  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  buckaroo.json  conanfile.txt  cxx14.cmake  fabfile.py  kodiak_killall.sh  kodiak_run_all.sh  paxos-microbench.py  requirements.txt  rrr.h  rrr.hpp  run.py  run_all.py  run_all.sh  run_ss.py  run_teaker.rb  run_tiger.py  server.sh  test_run.py  tmp.sh  waf  wscript
.waf-tools/: boost.py  unittest_gtest.py
acc_evaluation/: config_nodes.bash  gather_data.bash  parameter.txt  process-data.bash  run-all-evals.bash  run-eval.bash
acc_evaluation/configs/: 8s64c.yml  NODES_DEFAULT.YML  client_nodes.txt  server_nodes.txt
base/: basetypes.hpp  debugging.cpp  logging.cpp  logging.hpp  misc.hpp  strop.cc  threading.cc  threading.hpp
bench/micro/: chopper.cc  chopper.h  piece.cc  piece.h  procedure.cc  procedure.h  workload.cc  workload.h
bench/rw/: procedure.cc  procedure.h  workload.cc  workload.h
bench/rw_benchmark/: chopper.cc  chopper.h  generator.cc  generator.h  piece.cc  piece.h  sharding.h
bench/simple/: SimpleBenchChopper.cc  SimpleBenchChopper.h  SimpleBenchPiece.cc  SimpleBenchPiece.h  SimpleBenchSharding.cc  SimpleBenchSharding.h
bench/tpca/: chopper.cc  chopper.h  generator.cc  generator.h  payment.cc  payment.h  piece.cc  piece.h  sharding.cc  sharding.h  workload.cc  workload.h  zipf.h
bench/tpcc/: chopper.cc  chopper.h  delivery.cc  delivery.cpp  generator.cc  generator.h  new_order.cc  new_order.cpp  order_status.cc  order_status.cpp  payment.cc  payment.cpp  piece.cc  piece.h  procedure.cc  procedure.h  sharding.cc  stock_level.cc  stock_level.cpp  workload.cc  workload.h
bench/tpcc_dist/: chopper.cc  chopper.h  procedure.h
bench/tpcc_real_dist/: chopper.cc  chopper.h  delivery.cc  generator.cc  generator.h  new_order.cc  payment.cc  piece.cc  piece.h  procedure.h  sharding.cc  sharding.h  workload.cc
cmake/Hunter/: config.cmake
config/: 16c2s18p.yml  16c2s1p.yml  18p.yml  1c10s30r10p.yml  1c10s30r1p.yml  1c15s45r1p.yml  1c1s.yml  1c1s1p.yml  1c1s2p.yml  1c1s2r.yml  1c1s3r1p.yml  1c1s3r3p.yml  1c2s1p.yml  1c2s6r1p.yml  1c3s3r1p.yml  1p.yml  256c8s1p.yml  2c1s1p.yml  2c2s1p.yml  3c1s1p.yml  3c1s2p.yml  3c1s3r.yml  3c1s3r1p.yml  3c1s4p.yml  3c1s5r.yml  3c3s1p.yml  3c3s3r.yml  3c3s3r1p.yml  3p.yml  4c4s1p.yml  64c1s1p.yml  64c8s1p.yml  64c8s3r1p.yml  8c1s1p.yml  8c8s1p.yml  9c3s3r.yml  9c3s3r18p.yml  9c3s3r1p.yml  9c6s3r.yml  9p.yml  (+59 more)
config/etc/: fstab  (+4 more)
coroutine/: coroutine.cc  coroutine.h  event.cc  event.h  scheduler.cc  scheduler.h
deptran/: __dep__.h  all.h  batch_start_args_helper.cc  batch_start_args_helper.h  benchmark_control_rpc.cc  benchmark_control_rpc.h  c_main.cc  client_worker.cc  client_worker.h  command.h  command_marshaler.cc  command_marshaler.h  commo.cc  commo.h  communicator.cc  communicator.h  compress.h  compress.hpp  config.cc  config.cpp  config.h  config.hpp  constants.h  constants.hpp  coordinator.cc  coordinator.h  dep_graph.cc  dep_graph.hpp  dep_row.cc  dep_row.h  dtxn.cc  dtxn.cpp  dtxn.h  dtxn.hpp  dtxn_mgr.cc  dtxn_mgr.h  epochs.h  executor.cc  executor.h  frame.cc  (+62 more)
doc/: Distributed-Execution.md  Environment-Setup.md  Home.md  Open-loop-vs-Closed-loop-clients.md  README.md  Setup-Instructions-(EC2).md  build.md  ec2.md  paxos.md  plot.md  profile.md  run.md
event/: CMakeLists.txt  Makefile  event.hpp  mutex.cpp  scheduler.cpp  scheduler.hpp  task.cpp  task.hpp  test.cpp
extern_interface/: scheduler.c  scheduler.h
mdcc/: mdcc.rpc
memdb/: row.cc  row.h  schema.cc  schema.h  snapshot.h  table.cc  table.h  txn.cc  txn.h  txn_2pl.cc  txn_2pl.h  txn_nested.cc  txn_nested.h  txn_occ.cc  txn_occ.h  txn_unsafe.cc  txn_unsafe.h  utils.cc  utils.h  value.h
misc/: alock.cpp  alock.hpp  dball.hpp  marshal.hpp  recorder.cc  recorder.hpp  stat.hpp
mq/: client.h  rpc.h  rpc_comm.h
new-test/: test-bench-kv.cc  test-null.cc
old-test/: benchmark_service.cc  benchmark_service.h  rpc_microbench.cc  rpcbench.cc  test_dtxn.cc  test_lambda.cc  test_rand.cc  test_sm.cc
profile-results/: 20k-req-32-outstanding-on-zoo.txt
pylib/: cluster.py  ec2.py  placement_strategy.py  ps.py  security_group.py
rlog/: log_server.cc  log_service_impl.h  rlog.cpp
rpc/: client.hpp  marshal.hpp~  polling.cpp  server.cpp
rpc_test/: c.cpp  c_share_n.cpp  c_share_one.cc
rrr/: rrr.hpp
scripts/: add_latency.sh  aggregate_and_graph.sh  aggregate_run_output.py  archive.sh  csv_order_by_experiement_id.sh  debug.sh  del_latency.sh  deptran_gdb.sh  extract_txn_info.py  figure.py  fixup_yml.py  generate_latex_macros.py  graph_zipf.sh  graphzipf.sh  make_graphs  micro_bench_figure_gen_kodiak.py  paxos-microbench.py  run_all.sh  scale_10coos_tpcc_mix_10_log_figure_gen_kodiak.py  scale_10coos_tpcc_mix_10_nlog_figure_gen_kodiak.py  scale_20coos_tpcc_mix_10_log_figure_gen_kodiak.py  scale_20coos_tpcc_mix_10_nlog_figure_gen_kodiak.py  scale_20coos_tpcc_no_10_nlog_figure_gen_kodiak.py  scale_40coos_tpcc_mix_10_log_figure_gen_kodiak.py  scale_40coos_tpcc_mix_10_nlog_figure_gen_kodiak.py  strace.sh  tpcc_mix_10_log_figure_gen_local.py  tpcc_mix_10_nlog_figure_gen_kodiak.py  tpcc_mix_10_nlog_figure_gen_local.py  tpcc_no_10_log_figure_gen_local.py  tpcc_no_10_nlog_figure_gen_kodiak.py  tpcc_no_10_nlog_figure_gen_local.py
src/: run.cc
template/: figure_gen_template.py  kv_bench.xml  micro_bench.xml  micro_bench_figure_gen_template.py  ori_tpcc_mix.xml  ori_tpcc_no.xml  scale_figure_gen_template.py  scale_tpcc_mix_10.xml  scale_tpcc_no_10.xml  tpcc_mix_1.xml  tpcc_no_1.xml
test/: benchmark_service.cc  benchmark_service.h  benchmark_service.rpc  coroutine.cc  graph_test.cc  rpc_microbench.cc  rpcbench.cc  test-bench-kv.cc  test-helper.h  test-txnbench.cc  test_alock.cc  test_config_sharding.cc  test_dtxn.cc  test_graph.cc  test_io_wait.cc  test_marshal_value.cc  test_rand.cc  test_sm.cc  test_timer.cc  test_tpca.cc  testharness.cc
tla/: Janus.tla
utils/: easy_db.h  hostname.h  logger.h  mht.h  mlock.h  mpr_queue.h  mpr_thread_pool.h
(+918 files in other folders)
